force-app/main/default/objects/Reply_Rec_Demo_Helper_QuickText__c.object
<CustomObject>
    <description>What: Reply Recommendations FOR DEMO Helper QuickText. Who Service Team. DO NOT CHANGE</description>
    <fields>
        <fullName>Demo_Helper__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Demo Helper</label>
        <referenceTo>Reply_Rec_Demo_Helper__c</referenceTo>
        <relationshipLabel>Reply Rec Demo Helper QuickTexts</relationshipLabel>
        <relationshipName>Reply_Rec_Demo_Helper_QuickTexts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QuickText__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quick Text</label>
        <referenceTo>QuickText</referenceTo>
        <relationshipLabel>Reply Rec Demo Helper QuickTexts</relationshipLabel>
        <relationshipName>Reply_Rec_Demo_Helper_QuickTexts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Reply Rec Demo Helper QuickText</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>External_ID__c</columns>
        <columns>Demo_Helper__c</columns>
        <columns>QuickText__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RRQT-{00000}</displayFormat>
        <label>Reply Rec Demo Helper Quick Text Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reply Rec Demo Helper QuickTexts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>